# voxorio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert
src/: game.c  game.h  main.c
src/core/: camera.c  camera.h  shader.c  shader.h
src/world/: chunk.c  chunk.h  chunk_hashmap.c  chunk_hashmap.h  world.c  world.h
